src/design/styles/vue-select.sass
.dark-mode .vs__search::placeholder,
.dark-mode .vs__dropdown-toggle,
.dark-mode .vs__dropdown-menu,
.dark-mode .vs__selected,
.dark-mode .vs__dropdown-option,
.dark-mode .vs__dropdown-option--highlight
  background: #222933
  color: #eee !important
.dark-mode .vs__dropdown-option--highlight
  background: #313846

.dark-mode .vs__clear,
.dark-mode .vs__open-indicator
  fill: #eee

